--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5"
+    "multer": "^1.4.4-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   }
 } 
