--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
