--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "private": true,
   "dependencies": {
     "@firebase/auth": "^1.10.7",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
+    "grapesjs": "^0.21.5",
+    "grapesjs-blocks-basic": "^1.0.2",
+    "grapesjs-blocks-flexbox": "^1.0.1",
+    "grapesjs-custom-code": "^1.0.2",
+    "grapesjs-plugin-export": "^1.0.12",
+    "grapesjs-plugin-forms": "^2.0.6",
+    "grapesjs-tabs": "^1.0.6",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-quill": "^2.0.0",
